css/portfolio.css
.portfolio-title {
    font-size: 36px;
    line-height: 1.11111;
     text-align: center;
     color: #2E2F42;
     margin-bottom: 72px;
}

.portfolio-subtitle {
    font-weight: 500;
    font-size: 20px;
    line-height: 1.2;
    color: #2E2F42;
    margin-bottom: 8px;
}

.portfolio-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.portfolio-list {
    display: flex;
    flex-wrap: wrap;
    row-gap: 48px;
    column-gap: 24px;
}

.portfolio-item {
    
    flex-basis: calc((100% - 48px) / 3);
    background-color: #FFFFFF;
}

.portfolio-content {
    border: 1px solid #E7E9FC;
    border-top: none;
    padding: 32px 16px;
    wrap: wrap;
}

